--- a/LoginActivity/res/values/strings.xml
+++ b/LoginActivity/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Twitter Client</string>
     <string name="action_settings">Settings</string>
     <string name="action_compose">Compose</string>
@@ -7,4 +8,8 @@
     <string name="login_label">Log in</string>
     <string name="title_activity_home_feed">Tweets</string>
     <string name="title_activity_compose">ComposeActivity</string>
+    <string name="action_profile">Profile</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
