--- a/LoginActivity/res/values/strings.xml
+++ b/LoginActivity/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Twitter Client</string>
+    <string name="app_name">Let us Tweet</string>
     <string name="action_settings">Settings</string>
     <string name="action_compose">Compose</string>
     <string name="action_post">Post</string>
     <string name="login_label">Log in</string>
-    <string name="title_activity_home_feed">Tweets</string>
+    <string name="title_activity_home_feed"></string>
     <string name="title_activity_compose">ComposeActivity</string>
     <string name="action_profile">Profile</string>
     <string name="title_activity_profile">ProfileActivity</string>
